# inky-photo-frame

./: .gitignore  AGENTS.md  CHANGELOG.md  COLOR_CALIBRATION.md  INSTALLATION_GUIDE.md  README.md  SUMMARY.md  diagnostic_report.sh  inky-photo-frame-cli  inky_photo_frame.py  install.sh  logrotate.conf  pyproject.toml  uninstall.sh  update.sh
.github/: copilot-instructions.md
