[project]
name = "inky-photo-frame"
version = "1.1.7"
description = "Digital photo frame for Raspberry Pi with Inky Impression e-ink displays"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mehdi" }
]
dependencies = [
    "inky>=1.5.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "watchdog>=3.0.0",
    "lgpio>=0.2.0",
    "RPi.GPIO>=0.7.0",
    "gpiozero>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.scripts]
inky-photo-frame = "inky_photo_frame:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["inky_photo_frame.py"]
